- The number of players and spectators currently online is now displayed on logging in
- The 'TServ' mode of TSpec is now supported
- Channels can be dedicated to TetriFast or non TetriFast clients. A warning is displayed when mixed clients play together.
- Spaces in team names are now properly handled
- The winner can now hear the victory sound at the end of the game

Admin visible changes
- Jetrix now requires Java 6
- Fixed a bug preventing the modification of the access level of a command when the "access-level" attribute was set on the <command> element
- Added a visibility parameter on channels, it's now possible to have an invisible channel on the /list result
- Channels can now be created from the administration console
- The IP of the server is no longer submitted to tfast.org since the site is dead
- The web administration console has been moved from port 8080 to port 31460
- The client speed can now be checked by setting the server property 'speedcheck.enabled" to "true"

Developer visible changes
- added a readLine(Reader) method in the Protocol interface
- Renamed Client.receiveMessage() into Client.receive()
- removed the dependency on JDIC


Changes in version 0.2.3 (2008-08-23)
-------------------------------------

- Fixed a bug in the mode 4 (25% pure) of the #custom channel that was causing a crash of the classic tnet 1.13 client
- The address of the server is now published to http://servers.tetrinet.fr instead of tsrv.com, tetrinet.org and tfast.org


Changes in version 0.2.2 (2005-04-07)
-------------------------------------

- Fixed a bug preventing the clients from connecting to a server with a default charset different from ISO-8859-1
- The configuration is no longer broken by a "&" char in the description of a channel


Changes in version 0.2.1 (2005-02-18)
-------------------------------------

- Fixed the Shutdown button on the server administration page